Piyush 18 Jun 2026: Fixed the Hacklabs Stats component where stats counter happens only when entire component is visible also increase font visiblity of hero text

--- a/src/components/HacklabsHero.css
+++ b/src/components/HacklabsHero.css
@@ -40,7 +40,7 @@
   font-family: "Raleway Dots", sans-serif;
   font-weight: 400;
   font-size: 15vh;
-  color: #cfcfcf3e;
+  color: #cfcfcf9e;
 }
 
 /* RIGHT SIDE */
